<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".com.kenneth.android.petagram.activity.ListadoActivity">
    <item
        android:id="@+id/action_favoritos"
        android:title="@string/favoritos"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_star5_w"/>
    <item
        android:id="@+id/action_contacto"
        android:title="@string/action_contacto"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="102"
        app:showAsAction="never"/>
</menu>